SAK-22538, help files for trunk (reporter has tested they're valid)
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@112086 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile-help/src/sakai_profile/aqze_pt_BR.html
+++ b/profile-help/src/sakai_profile/aqze_pt_BR.html
@@ -1,3 +1,4 @@
+﻿<!-- Translated by: LARC: Laboratory of Computer Architecture and Networks - USP - University of Sao Paulo - Sao Paulo, Brazil --> 
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html><head>
 <title>Rever ou Modificar seu Perfil</title>
@@ -16,7 +17,8 @@
 <h2>Revendo ou Modificando seu Perfil</h2>
 <p>Para rever ou Modificar seu Perfil: </p>
 
-<ol><li>No <a href="content.hlp?docId=arcc">menubar</a> do <a href="content.hlp?docId=aqzy_pt_BR">Meu Workspace</a>, clique em <strong><code>Perfil</code></strong>.
+<ol><li>No <a href="content.hlp?docId=arcc">menubar</a> do <a href="content.hlp?docId=aqzy_pt_BR">Meu Workspace</a>, 
+clique em <strong><code>Perfil</code></strong>.
 
 <p>Você verá todas as informações do seu perfil. No entanto,
 nessa visualização, você não verá os campos que não possuem informações
