--- a/profile-help/src/sakai_profile/aror_pt_BR.html
+++ b/profile-help/src/sakai_profile/aror_pt_BR.html
@@ -1,3 +1,4 @@
+﻿<!-- Translated by: LARC: Laboratory of Computer Architecture and Networks - USP - University of Sao Paulo - Sao Paulo, Brazil --> 
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html><head>
 <title>Adicionando uma foto no seu perfil</title>
@@ -15,10 +16,10 @@
 <div class="helpBody">
 <h2>Adicionando uma foto no seu perfil</h2>
 
-<p>Para adicionar uma foto no seu perfil, vocÃª precisa primeiro  to your
-profile, vocÃª deve primeiro fazer o upload do arquivo da imagem desejada para Resources no
-seu <a href="content.hlp?docId=aqzy_pt_BR">Meu Workspace</a>; veja as instruÃ§Ãµes em <a href="content.hlp?docId=arfs_pt_BR">Resources</a>. 
-VocÃª pode selecionar um arquivo de imagem de qualquer tamanho, mas serÃ¡ automaticamente redimensionado para 75x75 pixels quando
+<p>Para adicionar uma foto no seu perfil, 
+ você deve primeiro fazer o upload do arquivo da imagem desejada para Repositório no
+seu <a href="content.hlp?docId=aqzy_pt_BR">Meu Workspace</a>; veja as instruções em <a href="content.hlp?docId=arfs_pt_BR">Repositório</a>. 
+Você pode selecionar um arquivo de imagem de qualquer tamanho, mas será automaticamente redimensionado para 75x75 pixels quando
 exibido em seu perfil.</p>
 
 <p>Depois de ter carregado o arquivo de imagem:</p>
@@ -29,20 +30,21 @@ exibido em seu perfil.</p>
 </li><li>Clique em <strong><code>Editar meu Perfil</code></strong>.
 
 <br /><br />
-</li><li>Ao lado de "Foto", escolha<strong><code>Usar URL da Foto:Â </code></strong>. Em seguida,
-no campo correspondente, digitar a URL do arquivo referente a sua foto que estÃ¡ na ferramenta Resources. Para obter instruÃ§Ãµes sobre como localizar o URL, 
-veja <a href="content.hlp?docId=auen_pt_BR">Encontrar a URL de um item na ferramenta Resources</a>.
+</li><li>Ao lado de "Foto", escolha<strong><code>Usar URL da Foto: </code></strong>. Em seguida,
+no campo correspondente, digitar a URL do arquivo referente a sua foto que está na ferramenta Repositório. 
+Para obter instruções sobre como localizar a URL, 
+veja <a href="content.hlp?docId=auen_pt_BR">Encontrar a URL de um item na ferramenta Repositório</a>.
 
-<p><strong>Dica:</strong> Se vocÃª desja que seu perfil exiba sua foto de ID da universidade,
-selecione <strong><code>Usar Foto de Id da Universidade</code></strong>. Se vocÃª escolher essa opÃ§Ã£o,
-vocÃª nÃ£o precisa salvar sua foto no seu Resources ou colar a URL no campo.</p>
-</li><li>Clique em <strong><code>Salvar</code></strong>. Agora vocÃª pode ver sua foto exibida
+<p><strong>Dica:</strong> Se você desja que seu perfil exiba sua foto de ID da universidade,
+selecione <strong><code>Usar Foto de Id da Universidade</code></strong>. Se você escolher essa opção,
+você não precisa salvar sua foto no seu Repositório ou colar a URL no campo.</p>
+</li><li>Clique em <strong><code>Salvar</code></strong>. Agora você pode ver sua foto exibida
 ao lado de seu nome em "Perfil ".
 </li></ol>
 
-<p>Outros vÃ£o ver a sua foto exibida em seu perfil a menos que vocÃª
-selecionou <strong><code>Ocultar meu Perfil Inteiro</code></strong> ou <strong><code>Ocultar apenas minhas InformaÃ§Ãµes Pessoais </code></strong> 
-nas configuraÃ§Ãµes do seu perfil.</p>
+<p>Outros vão ver a sua foto exibida em seu perfil a menos que você
+selecionou <strong><code>Ocultar meu Perfil Inteiro</code></strong> ou <strong><code>Ocultar apenas minhas Informações Pessoais </code></strong> 
+nas configurações do seu perfil.</p>
 
 
 
